force-app/main/default/objects/Work_Breakdown_Structure_Item__c/Work_Breakdown_Structure_Item__c.object-meta.xml
<CustomObject>
    <label>Work Breakdown Structure Item</label>
    <nameField>
        <label>Work Breakdown Structure Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Breakdown Structure Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>