force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Engineering Unit, Sub-Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Breakdown Structure Items</relationshipLabel>
    <relationshipName>Work_Breakdown_Structure_Items</relationshipName>
    <type>Lookup</type>
</CustomField>