force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <displayFormat>WK-{00000000}</displayFormat>
    <label>Code</label>
    <type>AutoNumber</type>
</CustomField>