force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Price_of_work__c.field-meta.xml
<CustomField>
    <fullName>Price_of_work__c</fullName>
    <formula>Work__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price of Work for One Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>