force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Set_Account_From_Parent__c.field-meta.xml
<CustomField>
    <fullName>Set_Account_From_Parent__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Sets accounts field value with Account Name from Work Breakdown Structure that&apos;s choosed</inlineHelpText>
    <label>Set Account From Parent</label>
    <type>Checkbox</type>
</CustomField>