force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Total_Amount_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amount Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>