force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF( ISPICKVAL( Unit_Of_Measure__c , &quot;Hours&quot;) , Quantity__c  *  Price_of_work__c, Quantity__c  *   ( Price_of_work__c  * 24 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>