force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
                <default>true</default>
                <label>Hours</label>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>