force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2__c.Type__c</field>
            <operation>equals</operation>
            <value>Work</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2__c</referenceTo>
    <relationshipLabel>Work Breakdown Structure Items (Work)</relationshipLabel>
    <relationshipName>Work_Breakdown_Structure_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>