force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Work_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Work_Assignment__c</fullName>
    <label>Work Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Breakdown Structure Items</relationshipLabel>
    <relationshipName>Work_Breakdown_Structure_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>