force-app/main/default/objects/Work_Breakdown_Structure_Item__c/fields/Work_Breakdown_Structure__c.field-meta.xml
<CustomField>
    <fullName>Work_Breakdown_Structure__c</fullName>
    <label>Work Breakdown Structure</label>
    <referenceTo>Work_Breakdown_Structure__c</referenceTo>
    <relationshipLabel>Work Breakdown Structure Items</relationshipLabel>
    <relationshipName>Work_Breakdown_Structure_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>